Untested first attempt at Relative Inter-Robot Measurements

--- a/backend/sloam_msgs/CMakeLists.txt
+++ b/backend/sloam_msgs/CMakeLists.txt
@@ -27,6 +27,7 @@ add_message_files(DIRECTORY msg FILES
     cylinderMap.msg
     MultiArrayPoseObjectEdges.msg
     poseObjectEdges.msg 
+    RelativeInterRobotMeasurement.msg
     ROSCube.msg
     PoseMst.msg
     PoseMstBundle.msg
