--- a/backend/sloam/CMakeLists.txt
+++ b/backend/sloam/CMakeLists.txt
@@ -121,6 +121,8 @@ cc_binary(
   DEPS sloam_base sloam_core)
 
 # TESTS
+# It appears that these test cases are not up to date, and thus won't work on current code.
+#
 # if(BUILD_TESTING)
 # enable_testing()
 # Example usage: ./sloam_ws/devel/lib/sloam/sloam_all_test --gtest_filter=CylinderTest* (optional filter)
@@ -136,3 +138,4 @@ cc_binary(
     # NAME cube_fg_test
     # SRCS "src/tests/cube_factor_test.cpp"
     # DEPS sloam_base sloam_factorgraph GTest::GTest)
+# endif()
