--- a/backend/sloam/package.xml
+++ b/backend/sloam/package.xml
@@ -36,6 +36,9 @@
   <depend>loop_closure</depend>
   <depend>actionlib</depend>
   <depend>actionlib_msgs</depend>
+  <test_depend>rostest</test_depend>
+  <test_depend>gtest</test_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
