--- a/frontend/relative_meas_gen/package.xml
+++ b/frontend/relative_meas_gen/package.xml
@@ -55,6 +55,7 @@
   <build_depend>sloam_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>yaml-cpp</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_export_depend>apriltag</build_export_depend>
   <build_export_depend>gtest</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
@@ -63,6 +64,7 @@
   <build_export_depend>sloam_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>yaml-cpp</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
   <exec_depend>apriltag</exec_depend>
   <exec_depend>gtest</exec_depend>
   <exec_depend>message_runtime</exec_depend>
@@ -72,6 +74,9 @@
   <exec_depend>sloam_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>yaml-cpp</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>python-pyproj</exec_depend>
+  <exec_depend>message_filters</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
