--- a/frontend/relative_meas_gen/package.xml
+++ b/frontend/relative_meas_gen/package.xml
@@ -73,6 +73,10 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>yaml-cpp</exec_depend>
 
+  <test_depend>rostest</test_depend>
+  <test_depend>gtest</test_depend>
+
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
