--- a/frontend/relative_meas_gen/package.xml
+++ b/frontend/relative_meas_gen/package.xml
@@ -54,6 +54,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>sloam_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
   <build_depend>yaml-cpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_export_depend>apriltag</build_export_depend>
@@ -62,6 +63,7 @@
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sloam_msgs</build_export_depend>
+  <build_export_depend>gazebo_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>yaml-cpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
@@ -72,6 +74,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sloam_msgs</exec_depend>
+  <exec_depend>gazebo_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>yaml-cpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
