--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,7 +17,7 @@ RUN git clone https://github.com/AprilRobotics/apriltag.git && \
     ldconfig
 
 # Install pyproj into the python environment
-RUN pip install pyproj=3.5.0
+RUN pip install pyproj==3.5.0
 
 # Set working directory back to default
 WORKDIR /app
