Test cases for PickNextMeasurementToAdd

--- a/backend/sloam/CMakeLists.txt
+++ b/backend/sloam/CMakeLists.txt
@@ -117,34 +117,12 @@ cc_binary(
   # DEPS sloam_log sloam_base sloam_objects sloam_core sloam_viz sloam_segmentation sloam_factorgraph gtsam ${catkin_LIBRARIES} -ldw #sloam_loop 
 )
 
+# Example usage: ./sloam_ws/devel/lib/sloam/sloam_all_test --gtest_filter=CylinderTest* (optional filter)
 cc_binary(
   NAME place_recognition_test
-  SRCS "src/tests/place_recognition_test.cpp"
+  SRCS "src/test/place_recognition_test.cpp"
   DEPS sloam_base sloam_core)
 
-
-
-if(BUILD_TESTING)
-  enable_testing()
-
-  cc_test(
-  NAME inter_robot_factor_test
-  SRCS "src/tests/inter_robot_factor_test.cpp"
-  DEPS sloam_base sloam_objects sloam_core GTest::GTest)
-
-# These test cases are not up to date, and thus won't work on current code.
-#
-# Example usage: ./sloam_ws/devel/lib/sloam/sloam_all_test --gtest_filter=CylinderTest* (optional filter)
-# cc_test(
-  # NAME all_sloam_test
-  # SRCS "src/tests/run_all_test.cpp" "src/tests/plane_test.cpp" "src/tests/cylinder_test.cpp" "src/tests/core_test.cpp"
-  # DEPS sloam_base sloam_objects sloam_core GTest::GTest)
-# cc_test(
-  # NAME fg_test
-  # SRCS "src/tests/cylinder_factor_test.cpp"
-  # DEPS sloam_base sloam_factorgraph GTest::GTest)
-# cc_test(
-    # NAME cube_fg_test
-    # SRCS "src/tests/cube_factor_test.cpp"
-    # DEPS sloam_base sloam_factorgraph GTest::GTest)
-endif()
+# Add Unit Tests
+catkin_add_gtest(input_test "src/test/input_test.cpp")
+target_link_libraries(input_test sloam_core ${catkin_LIBRARIES})
