--- a/backend/sloam/params/sloam_multiUGV.yaml
+++ b/backend/sloam/params/sloam_multiUGV.yaml
@@ -55,3 +55,10 @@ sloam:
     sigma: 0.1 # CLIPPER params, default 0.01, spread / "variance" of exponential kernel
     epsilon: 0.3 # CLIPPER params, default 0.06, < bound on consistency score, determines if inlier/outlier, consistency matching threshold
 
+  # Parameters for Factor graph
+  factor_graph:
+    #VERY IMPORTANT: First three (Rotation) and last three (Translation)
+    noise_model_prior_first_pose_vec: [0.01, 0.01, 0.01, 0.01, 0.01, 0.01]
+    noise_model_odom_vec: [0.01, 0.01, 0.01, 0.01, 0.01, 0.01]
+    noise_model_cube_vec: [0.017, 0.017, 0.017, 0.5, 0.5, 0.5, 0.05, 0.05, 0.05]
+    noise_model_rel_meas_vec: [0.0017, 0.0017, 0.0017, 0.06, 0.06, 0.06]
