github actions test 4/7 17:57

--- a/.github/workflows/SLIDE_SLAM_test.yml
+++ b/.github/workflows/SLIDE_SLAM_test.yml
@@ -45,4 +45,4 @@ jobs:
 
     - name: Run SLIDE_SLAM Tests
       run: |
-        docker exec -it slideslam_ros sh -c "catkin_make run_tests"
+        docker exec slideslam_ros sh -c "catkin_make run_tests"
