--- a/frontend/relative_meas_gen/CMakeLists.txt
+++ b/frontend/relative_meas_gen/CMakeLists.txt
@@ -200,7 +200,7 @@ target_link_libraries(apriltag_meas_gen ${catkin_LIBRARIES} ${OpenCV_LIBS} ${apr
 if (CATKIN_ENABLE_TESTING)
   find_package(catkin REQUIRED COMPONENTS roscpp rostest)
 
-  catkin_add_gtest(apriltag_test test/apriltag_test.cpp src/apriltag_wrapper.cpp)
+  catkin_add_gtest(apriltag_test tests/apriltag_test.cpp src/apriltag_wrapper.cpp)
   target_link_libraries(apriltag_test ${catkin_LIBRARIES} GTest::GTest GTest::Main)
   target_link_libraries(apriltag_test ${OpenCV_LIBS} ${apriltag_LIBRARIES})
 endif()
