--- a/.github/workflows/SLIDE_SLAM_test.yml
+++ b/.github/workflows/SLIDE_SLAM_test.yml
@@ -39,10 +39,8 @@ jobs:
         chmod +x run_container.sh
         ./run_container.sh
 
-    - name: Build SLIDE_SLAM inside Container
+    - name: Build SLIDE_SLAM inside Container and run tests
       run: |
-        docker exec slideslam_ros sh -c "catkin_make && source devel/setup.bash"        docker exec slideslam_ros sh -c "source devel/setup.bash"
-
-    - name: Run SLIDE_SLAM Tests
-      run: |
+        docker start slideslam_ros
+        docker exec slideslam_ros sh -c "catkin_make && source devel/setup.bash"
         docker exec slideslam_ros sh -c "catkin_make run_tests"
