Remove unfinished covariance code, test case for utils.h

--- a/backend/sloam/CMakeLists.txt
+++ b/backend/sloam/CMakeLists.txt
@@ -126,3 +126,6 @@ cc_binary(
 # Add Unit Tests
 catkin_add_gtest(input_test "src/test/input_test.cpp")
 target_link_libraries(input_test sloam_core ${catkin_LIBRARIES})
+
+catkin_add_gtest(utils_test "src/test/utils_test.cpp")
+target_link_libraries(utils_test sloam_core ${catkin_LIBRARIES})
