github actions test 4/9 11:33

--- a/.github/workflows/SLIDE_SLAM_test.yml
+++ b/.github/workflows/SLIDE_SLAM_test.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Build SLIDE_SLAM inside Container and run tests
       run: |
         docker start slideslam_ros
-        docker cp ~/slideslam_docker_ws/src/SLIDE_SLAM/. slideslam_ros:/opt/slideslam_docker_ws/src/SLIDE_SLAM
+        docker exec slideslam_ros bash -c "tree"
         docker exec slideslam_ros bash -c "source /opt/ros/noetic/setup.bash && rosdep update && rosdep install --from-paths /opt/slideslam_docker_ws/src --ignore-src -r -y"
         docker exec slideslam_ros bash -c "source /opt/ros/noetic/setup.bash && cd /opt/slideslam_docker_ws && catkin_make && source devel/setup.bash"
         docker exec slideslam_ros bash -c "source /opt/ros/noetic/setup.bash && source /opt/slideslam_docker_ws/devel/setup.bash && cd /opt/slideslam_docker_ws && catkin_make run_tests && catkin_test_results --verbose"
