--- a/frontend/relative_meas_gen/package.xml
+++ b/frontend/relative_meas_gen/package.xml
@@ -59,6 +59,7 @@
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>yaml-cpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>roslib</build_depend>
   <build_export_depend>apriltag</build_export_depend>
   <build_export_depend>gtest</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
@@ -70,6 +71,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>yaml-cpp</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>roslib</build_export_depend>
   <exec_depend>apriltag</exec_depend>
   <exec_depend>gtest</exec_depend>
   <exec_depend>message_runtime</exec_depend>
@@ -86,6 +88,8 @@
   <exec_depend>message_filters</exec_depend>
   <exec_depend>python-numpy</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend>roslib</exec_depend>
+
 
   <test_depend>rostest</test_depend>
   <test_depend>gtest</test_depend>
