--- a/backend/sloam/params/sloam_CoPeD.yaml
+++ b/backend/sloam/params/sloam_CoPeD.yaml
@@ -19,8 +19,8 @@ sloam:
   debug_mode: true
   odom_freq_filter: 10  # Add every odom_freq_filter odom messages to the queue. Target same freq. as lidar. odom_freq = raw_odom_freq / odom_freq_filter, if you want to use all odometry messages, set this to 1
   max_queue_size: 200 # maximum queue size for point clouds buffer (odom buffer will be 10x this)
-  map_frame_id: quadrotor/map
-  odom_frame_id: quadrotor/odom
+  map_frame_id: wilbur/map
+  odom_frame_id: wilbur/map
   robot_frame_id: body
 
   # parameters for place recognition
